@@ -1,3 +1,15 @@
+2005-11-24  Maurizio Paolini <paolini@dmf.unicatt.it>
+
+	* Arc of conics are implemented as a new graphic object
+	(inherited from ConicImp).  There is only one construction
+	for them right now: Construct the conic arc with given endpoints,
+	a "through" point and the conic center.
+	Projective transformations are implemented and a circular arc
+	can now be transformed with a generic affine or projective
+	transformation.
+	Three properties are implemented: supporting conic, first end-point
+	and second end-point.
+
 2005-09-29  Maurizio Paolini <paolini@dmf.unicatt.it>
 
 	* Fix drawing of arcs with very small angle (patch by
